    - Improved display for HiDPI
CR: Windows: Omission from the 32-bit service
    - The required 32-bit version of prunsrv.exe can be downloaded manually
      here, renamed, and used to replace service.exe:
      https://downloads.apache.org/commons/daemon/binaries/windows/
CR: Documentation: Added installation as a service for Linux and macOS
??: Configuration: Add # as optional/alternavtive comment symbols

5.8.0 20251231
NT: Competition: 25 years Devwex -- raffle one of 10x 3.5" disks.
    Send an e-mail to devwex@seanox.com by 04/11/2026.
    The outcome of the raffle is final and not subject to legal appeal. 
BF: Review: Optimization and corrections
BF: HTTP(S): Update / standardization of HTTP status messages
BF: HTTP(S): Omission of status 424, which was simply incorrect
    Status 400 and 500 are now used correctly.
CR: Test: Integration of JaCoCo (Java Code Coverage)
CR: Service: Optimization of logging output

5.7.0 20241214
BF: Unix/Linux: Correction of the missing second start parameter in the bash script
BF: Windows: Correction of the missing second start parameter in the batch script
BF: HTTP(S): Correction of the Accept header when using CGI
    The server has incorrectly determined the content type for the CGI.
    Now the CGI must take care of the Accept header, as it should.
BF: Service: Optimization of automatic resource clean-up
BF: Service: Optimization for UTF-8
    In relation to RFC 20, RFC 1345, RFC 2616, RFC 7230: 7-bit US-ASCII and in
    extension ISO-8859-1 are supported for request and response.
CR: Unix/Linux: Optimization of bash scripts and runtime directory handling
    - Optimization of JRE determination in the runtime directory
      The Directory name does not matter, it is searched for files ./java,
      ./jre/bin/java and ./bin/java.
    - Optimization when including the runtime sub-directories
      The runtime directories and, if available, the bin subdirectory are added
      to the PATH variable.